--- a/services/nebula/web/templates/dashboard/index.html.eex
+++ b/services/nebula/web/templates/dashboard/index.html.eex
@@ -11,6 +11,7 @@
     <th>State</th>
     <th>Inserted</th>
     <th>Updated</th>
+    <th>Expires</th>
   </thead>
   <tbody>
     <%= for deploy <- deploys do %>
@@ -23,6 +24,7 @@
         <td><%= deploy.state %></td>
         <td><%= deploy.inserted_at %></td>
         <td><%= deploy.updated_at %></td>
+        <td><%= deploy.expire_at %></td>
       </tr>
     <% end %>
   </tbody>
