--- a/services/nebula/web/templates/layout/app.html.eex
+++ b/services/nebula/web/templates/layout/app.html.eex
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title></title>
+    <title>nebula</title>
+    <style>
+      body { font-family: monospace; }
+    </style>
   </head>
-
   <body>
     <header>
       <nav>
