--- a/services/nebula/web/templates/deploy/_allocations.html.eex
+++ b/services/nebula/web/templates/deploy/_allocations.html.eex
@@ -1,19 +1,21 @@
-<h5>Allocations</h5>
-<table style="text-align: left; width: 100%;">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Job ID</th>
-      <th>Name</th>
-    </tr>
-  </thead>
-  <tbody>
-    <%= for allocation <- @allocations do %>
+<%= if @allocations do %>
+  <h5>Allocations</h5>
+  <table style="text-align: left; width: 100%;">
+    <thead>
       <tr>
-        <td><%= allocation.id %></td>
-        <td><%= allocation.job_id %></td>
-        <td><%= allocation.name %></td>
+        <th>ID</th>
+        <th>Job ID</th>
+        <th>Name</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <%= for allocation <- @allocations do %>
+        <tr>
+          <td><%= allocation.id %></td>
+          <td><%= allocation.job_id %></td>
+          <td><%= allocation.name %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<%= end %>
